ecmascript/parser/tests/test262-error-references/fail/dc5864c9096ad0a8.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/dc5864c9096ad0a8.js:1:13
  |
1 | [a, ...b, {c=0}]
  |             ^

